eks/app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spring-app
  namespace: spring
  labels:
    app: apps
spec:
  replicas: 1
  selector:
    matchLabels:
      app: apps
  template:
    metadata:
      labels:
        app: apps
    spec:
      containers:
      - name: spring-app
        image: springio/gs-spring-boot-docker
        ports:
        - containerPort: 8080
