eks/app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: spring-app-svc
  namespace: spring
spec:
  type: ClusterIP
  selector:
      app: apps
  ports:
  - name: http
    port: 80
    targetPort: 8080
    protocol: TCP
